0.59.0.0/_sources/Reference/NodeReference/GafferAppleseed/AppleseedOptions.md.txt
AppleseedOptions
================

Sets global scene options applicable to the appleseed
renderer. Use the StandardOptions node to set
global options applicable to all renderers.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

options
-------

The options to be applied - arbitrary numbers of user defined options may be added
as children of this plug via the user interface, or using the CompoundDataPlug API via
python.

options.renderPasses
--------------------

Number of render passes.
When using photon mapping this is the number of
progressive refinement passes used.

options.sampler
---------------

Antialiasing sampler

options.minAASamples
--------------------

Number of uniform samples to render before adaptive sampling

options.maxAASamples
--------------------

Maximum number of anti-aliasing samples (0 for unlimited)

options.aaBatchSampleSize
-------------------------

How many samples to render before each convergence estimation

options.aaNoiseThresh
---------------------

Maximum amount of noise allowed in the image

options.lightingEngine
----------------------

Light transport engine

options.shadingOverride
-----------------------

Replaces all shaders in the scene by special
diagnostics shaders that can visualize uvs, normals, ...
Useful for debugging scenes.

options.environmentEDF
----------------------

Light to use as the environment.

options.environmentEDFBackground
--------------------------------

Whether or not the environment is visible in the background.

options.ptDirectLighting
------------------------

Enable direct lighting

options.ptIBL
-------------

Enable image-based lighting

options.ptCaustics
------------------

Enable caustics

options.ptMaxBounces
--------------------

Maximum number of bounces.If set to a negative number, use an unlimited number of bounces

options.ptMaxDiffuseBounces
---------------------------

Maximum number of diffuse bounces.If set to a negative number, use an unlimited number of bounces

options.ptMaxGlossyBounces
--------------------------

Maximum number of glossy bounces.If set to a negative number, use an unlimited number of bounces

options.ptMaxSpecularBounces
----------------------------

Maximum number of specular bounces.If set to a negative number, use an unlimited number of bounces

options.ptLightingSamples
-------------------------

Number of samples used to estimate direct lighting

options.ptIBLSamples
--------------------

Number of samples used to estimate environment lighting

options.ptMaxRayIntensity
-------------------------

Clamp intensity of rays (after the first bounce) to this value to reduce fireflies.Set to zero to disable

options.ptClampRoughness
------------------------

Clamp BSDF roughness parameter to a maximum level to reduce fireflies in glossy reflections

options.photonType
------------------

Photon Type

options.sppmDirectLighting
--------------------------

Method used to estimate direct lighting

options.sppmIBL
---------------

Enable image-based lighting

options.sppmCaustics
--------------------

Enable caustics

options.sppmPhotonMaxBounces
----------------------------

Maximum number of photon bounces.If set to a negative number, use an unlimited number of bounces

options.sppmPathMaxBounces
--------------------------

Maximum number of path bounces.If set to a negative number, use an unlimited number of bounces

options.sppmLightPhotons
------------------------

Number of light photons per render pass

options.sppmEnvPhotons
----------------------

Number of environment photons per render pass

options.sppmInitialRadius
-------------------------

Initial photon gathering radius in percent of the scene diameter.

options.sppmMaxPhotons
----------------------

Maximum number of photons used to estimate radiance

options.sppmAlpha
-----------------

Evolution rate of photon gathering radius

options.denoiserMode
--------------------

Enable the denoiser.
When choosing Write Outputs, two EXR images with denoising AOVs
will be written in the same directory as the beauty image.
The command line denoiser in appleseed can be used with the EXR files
to produce denoised images.

options.denoiserSkipPixels
--------------------------

Disabling this option will produce better results
at the expense of slower processing time.

options.denoiserRandomPixelOrder
--------------------------------

Process pixels in random order.
Enabling this option can help reducing artifacts.

options.denoiserScales
----------------------

Number of resolution scales used for denoising.

options.searchPath
------------------

The filesystem paths where shaders and textures
are searched for.

options.numThreads
------------------

Number of threads to use for rendering.Set to zero to use all CPU cores

options.interactiveRenderFps
----------------------------

Maximum progressive rendering update rate in frames per second

options.textureMem
------------------

Texture cache size in bytes

options.tileOrdering
--------------------

Tile rendering order

options.logLevel
----------------

Determines the verbosity of log
output.

options.logFileName
-------------------

The name of a log file which appleseed will generate
while rendering.

options.interactiveRenderMaxSamples
-----------------------------------

Sets the maximum number of samples to use when doing
interactive rendering.